[tool.poetry]
name = "proxy"
version = "0.1.0"
description = ""
authors = ["tclesius <tomclesius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp-ip-rotator = "^1.0"
fastapi = "^0.109.0"
pyyaml = "^6.0.1"
uvicorn = "^0.25"
python-dotenv = "^1.0.0"
validators = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
